# Physical-security-event-summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
data/: historical_incidents.csv  sample_cctv_logs.json  sensor_alerts.csv
src/: main.py
src/api/: routes.py  schemas.py
src/automation/: n8n_client.py
src/ingestion/: email_ingestor.py  file_ingestor.py  webhook_ingestor.py
src/intelligence/: event_summarizer.py  incident_classifier.py
src/llm/: client.py  response_parser.py  validator.py
src/preprocessing/: language_detection.py  text_cleaner.py
src/storage/: incident_model.py  models.py  repository.py
src/utils/: exceptions.py  helpers.py  logger.py
tests/integration/: test_full_pipeline.py  test_n8n_webhook.py
tests/unit/: test_automation.py  test_ingestion.py  test_intelligence.py  test_llm.py  test_preprocessing.py
