[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-security-event-summarizer"
version = "0.1.0"
description = "Ingest, summarize, and classify physical security incidents."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "pytest",
    "requests",
    "langdetect",
    "ruff"
]
